set fontawsome, font-family

--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cha sung hyeon - portfolio</title>
+    <!-- NOT ! -->
+    <meta name="description" content="Portfolio made by Cha sung hyeon">
+    <meta name="author" content="Cha sung hyeon">
     <link rel="stylesheet" href="style.css">
     <script src="./main.js"></script>
+    <script src="https://kit.fontawesome.com/920f3667b2.js" crossorigin="anonymous"></script>
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <h1>init</h1>
+    <h1>스포카 한 산스</h1>
+    <h1>SPOqA Han Sans</h1>
 </body>
 
 </html>
