work html,css on header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cha sung hyeon - portfolio</title>
+    <title>Cha sung hyeon - potfolio</title>
     <!-- NOT ! -->
     <meta name="description" content="Portfolio made by Cha sung hyeon">
     <meta name="author" content="Cha sung hyeon">
@@ -16,8 +16,33 @@
 </head>
 
 <body>
-    <h1>스포카 한 산스</h1>
-    <h1>SPOqA Han Sans</h1>
+    <header class="header">
+        <img src="./images/logo.png" class="logo"></img>
+        <nav class="nav">
+            <ul class="category">
+                <li class="home" data-id="home">home</li>
+                <li class="about" data-id="about">about</li>
+                <li class="skills" data-id="skills">skills</li>
+                <li class="mywork" data-id="mywork">mywork</li>
+                <li class="testimonial" data-id="testimonial">testimonial</li>
+                <li class="contact" data-id="contact">contact</li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="home"></section>
+        <section class="about"></section>
+        <section class="skills"></section>
+        <section class="mywork"></section>
+        <section class="testimonial"></section>
+        <section class="contact"></section>
+    </main>
+    <footer class="footer">
+        <h1>Let's talk</h1>
+        <h3>cktjdgus45@naver.com</h3>
+        <div class="git"></div>
+        <span>2022 frontend developer cha - All rights reserved</span>
+    </footer>
 </body>
 
 </html>
