work html,css on section : home

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         </nav>
     </header>
     <main class="main">
-        <section class="home"></section>
+        <section class="home">
+            <img class="profile" src="./images/profile.png" alt="">
+            <h1>Hello , </br>I'm Dream Coder</h1>
+            <h3>A Dream Coder who want to be a developer.</h3>
+            <button class="contact">CONTACT ME</button>
+        </section>
         <section class="about"></section>
         <section class="skills"></section>
         <section class="mywork"></section>
