work html,css on section:about

--- a/index.html
+++ b/index.html
@@ -36,7 +36,45 @@
             <h3>A Dream Coder who want to be a developer.</h3>
             <button class="contact">CONTACT ME</button>
         </section>
-        <section class="about"></section>
+        <section class="about">
+            <h1 class="title">About me</h1>
+            <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime facere rerum commodi
+                ea cum minima aperiam eos ad, officia laudantium.
+                Velit iusto rerum deleniti magni aut quisquam,
+                ea cum minima aperiam eos ad, officia laudantium.
+                Velit iusto rerum deleniti magni aut quisquam,
+                consequatur excepturi. Obcaecati.</p>
+            <ul class="stacks">
+                <li class="stack">
+                    <div class="stack-icon">
+                        <i class="fab fa-html5"></i>
+                    </div>
+                    <h3 class="stack-category">Front-end</h3>
+                    <p class="stack-content">HTLM, CSS, Javascript,</br>Typescript, Web APIs</>
+                </li>
+                <li class="stack">
+                    <div class="stack-icon">
+                        <i class="fab fa-react"></i>
+                    </div>
+                    <h3 class="stack-category">Library</h3>
+                    <p class="stack-content">React, BulmaCss</p>
+                </li>
+                <li class="stack">
+                    <div class="stack-icon">
+                        <i class="fas fa-server"></i>
+                    </div>
+                    <h3 class="stack-category">Back-end</h3>
+                    <p class="stack-content">NodeJS, Express, REST APIs</p>
+                </li>
+            </ul>
+            <div class="career">
+                <img class="university" src="./images/university-logo.jpg" alt="">
+                <div class="career-content">
+                    <h3>Currently done all of Yongin university curriculam</h3>
+                    <span class="history">2016.03.01 ~ 2022.02.17</span>
+                </div>
+            </div>
+        </section>
         <section class="skills"></section>
         <section class="mywork"></section>
         <section class="testimonial"></section>
