work html,css on section:skills

--- a/index.html
+++ b/index.html
@@ -75,7 +75,54 @@
                 </div>
             </div>
         </section>
-        <section class="skills"></section>
+        <section class="skills">
+            <h1 class="title">Skills</h1>
+            <h3 class="subtitle">Skills & Attributes</h3>
+            <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime facere rerum commodi
+                ea cum minima aperiam eos ad, officia laudantium.
+                Velit iusto rerum deleniti magni aut quisquam,
+                ea cum minima aperiam eos ad, officia laudantium.
+                Velit iusto rerum deleniti magni aut quisquam,
+                consequatur excepturi. Obcaecati.</p>
+            <div class="skills-container">
+                <div class="skills-box">
+                    <h3 class="skills-box-title">skills</h3>
+                    <div class="info">
+                        <span class="skill">HTML</span>
+                        <span class="percentage">90%</span>
+                    </div>
+                    <div class="bar">
+                        <div class="gage"></div>
+                    </div>
+                    <div class="info">
+                        <span class="skill">CSS</span>
+                        <span class="percentage">80%</span>
+
+                    </div>
+                    <div class="bar">
+                        <div class="gage"></div>
+                    </div>
+                    <div class="info">
+                        <span class="skill">Javascript</span>
+                        <span class="percentage">50%</span>
+                    </div>
+                    <div class="bar">
+                        <div class="gage"></div>
+                    </div>
+                </div>
+                <div class="another">
+                    <div class="tools">
+                        <h3 class="skills-box-title">Tools</h3>
+                        <p>Visual Studio Code</p>
+                    </div>
+                    <div class="etc">
+                        <h3 class="skills-box-title">Etc</h3>
+                        <p>Math</p>
+                        <p>Git</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="mywork"></section>
         <section class="testimonial"></section>
         <section class="contact"></section>
