work html,css on section:mywork

--- a/index.html
+++ b/index.html
@@ -123,7 +123,126 @@
                 </div>
             </div>
         </section>
-        <section class="mywork"></section>
+        <section class="mywork">
+            <h1 class="title">My Work</h1>
+            <h3 class="subtitle">Projects</h3>
+            <div class="work-categories">
+                <button class="work-category">
+                    <span>All</span>
+                    <div class="count">8</div>
+                </button>
+                <button class="work-category">
+                    <span>Front-end</span>
+                    <div class="count">8</div>
+                </button>
+                <button class="work-category">
+                    <span>Library</span>
+                    <div class="count">8</div>
+                </button>
+                <button class="work-category">
+                    <span>Back-end</span>
+                    <div class="count">8</div>
+                </button>
+            </div>
+            <div class="projects">
+                <a href="https://github.com/cktjdgus45" class="project">
+                    <img src="./images/project.png" alt="project" class="project-img">
+                    <div class="wrapper">
+                        <div class="wrapper-bg">
+                        </div>
+                        <div class="project-description">
+                            <h3>Youtube Website</h3>
+                            <div class="divider"></div>
+                            <p>Cloning Youtube website</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/cktjdgus45" class="project">
+                    <img src="./images/project.png" alt="project" class="project-img">
+                    <div class="wrapper">
+                        <div class="wrapper-bg">
+                        </div>
+                        <div class="project-description">
+                            <h3>Youtube Website</h3>
+                            <div class="divider"></div>
+                            <p>Cloning Youtube website</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/cktjdgus45" class="project">
+                    <img src="./images/project.png" alt="project" class="project-img">
+                    <div class="wrapper">
+                        <div class="wrapper-bg">
+                        </div>
+                        <div class="project-description">
+                            <h3>Youtube Website</h3>
+                            <div class="divider"></div>
+                            <p>Cloning Youtube website</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/cktjdgus45" class="project">
+                    <img src="./images/project.png" alt="project" class="project-img">
+                    <div class="wrapper">
+                        <div class="wrapper-bg">
+                        </div>
+                        <div class="project-description">
+                            <h3>Youtube Website</h3>
+                            <div class="divider"></div>
+                            <p>Cloning Youtube website</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/cktjdgus45" class="project">
+                    <img src="./images/project.png" alt="project" class="project-img">
+                    <div class="wrapper">
+                        <div class="wrapper-bg">
+                        </div>
+                        <div class="project-description">
+                            <h3>Youtube Website</h3>
+                            <div class="divider"></div>
+                            <p>Cloning Youtube website</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/cktjdgus45" class="project">
+                    <img src="./images/project.png" alt="project" class="project-img">
+                    <div class="wrapper">
+                        <div class="wrapper-bg">
+                        </div>
+                        <div class="project-description">
+                            <h3>Youtube Website</h3>
+                            <div class="divider"></div>
+                            <p>Cloning Youtube website</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/cktjdgus45" class="project">
+                    <img src="./images/project.png" alt="project" class="project-img">
+                    <div class="wrapper">
+                        <div class="wrapper-bg">
+                        </div>
+                        <div class="project-description">
+                            <h3>Youtube Website</h3>
+                            <div class="divider"></div>
+                            <p>Cloning Youtube website</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/cktjdgus45" class="project">
+                    <img src="./images/project.png" alt="project" class="project-img">
+                    <div class="wrapper">
+                        <div class="wrapper-bg">
+                        </div>
+                        <div class="project-description">
+                            <h3>Youtube Website</h3>
+                            <div class="divider"></div>
+                            <p>Cloning Youtube website</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
         <section class="testimonial"></section>
         <section class="contact"></section>
     </main>
