work html,css on section:testimonials

--- a/index.html
+++ b/index.html
@@ -243,8 +243,34 @@
                 </a>
             </div>
         </section>
-        <section class="testimonial"></section>
-        <section class="contact"></section>
+        <section class="testimonials">
+            <h1 class="title">Testimoials</h1>
+            <h3 class="description">see what they say about me</h3>
+            <div class="testimonial">
+                <img src="./images/profile.png" alt="testimonial-image" class="testimonial-profile">
+                <div class="testimonial-content">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nesciunt, suscipit possimus
+                        voluptatum esse asperiores itaque aliquam sequi quia minus. Fugit officia eaque nemo. Explicabo
+                        beatae non praesentium sunt similique.
+                    </p>
+                    <span class="testimonial-name">Alex</span>
+                    <span>/Tiger Spike</span>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="./images/profile.png" alt="testimonial-image" class="testimonial-profile">
+                <div class="testimonial-content">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita nesciunt, suscipit possimus
+                        voluptatum esse asperiores itaque aliquam sequi quia minus. Fugit officia eaque nemo. Explicabo
+                        beatae non praesentium sunt similique.
+                    </p>
+                    <span class="testimonial-name">Alex</span>
+                    <span>/Tiger Spike</span>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <h1>Let's talk</h1>
