work html,css on section:contact

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <img src="./images/logo.png" class="logo"></img>
         <nav class="nav">
             <ul class="category">
-                <li class="home" data-id="home">home</li>
-                <li class="about" data-id="about">about</li>
-                <li class="skills" data-id="skills">skills</li>
-                <li class="mywork" data-id="mywork">mywork</li>
-                <li class="testimonial" data-id="testimonial">testimonial</li>
-                <li class="contact" data-id="contact">contact</li>
+                <li class="nav-home" data-id="home">home</li>
+                <li class="nav-about" data-id="about">about</li>
+                <li class="nav-skills" data-id="skills">skills</li>
+                <li class="nav-mywork" data-id="mywork">mywork</li>
+                <li class="nav-testimonial" data-id="testimonial">testimonial</li>
+                <li class="nav-contact" data-id="contact">contact</li>
             </ul>
         </nav>
     </header>
@@ -273,9 +273,11 @@
         </section>
     </main>
     <footer class="footer">
-        <h1>Let's talk</h1>
-        <h3>cktjdgus45@naver.com</h3>
-        <div class="git"></div>
+        <h1 class="footer-title">Let's talk</h1>
+        <h3 class="email">cktjdgus45@naver.com</h3>
+        <div class="git">
+            <i class="fab fa-github"></i>
+        </div>
         <span>2022 frontend developer cha - All rights reserved</span>
     </footer>
 </body>
