--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Portfolio made by Cha sung hyeon">
     <meta name="author" content="Cha sung hyeon">
     <link rel="stylesheet" href="style.css">
-    <script src="./main.js"></script>
+    <script defer src="./main.js"></script>
     <script src="https://kit.fontawesome.com/920f3667b2.js" crossorigin="anonymous"></script>
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
 </head>
@@ -97,7 +97,6 @@
                     <div class="info">
                         <span class="skill">CSS</span>
                         <span class="percentage">80%</span>
-
                     </div>
                     <div class="bar">
                         <div class="gage"></div>
