--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+    <div class="arrow-container">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <header class="header">
         <img src="./images/logo.png" class="logo"></img>
         <nav class="nav">
