add scrollIntoView to header nav button

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                 <li class="nav-about" data-id="about">about</li>
                 <li class="nav-skills" data-id="skills">skills</li>
                 <li class="nav-mywork" data-id="mywork">mywork</li>
-                <li class="nav-testimonial" data-id="testimonial">testimonial</li>
+                <li class="nav-testimonial" data-id="testimonials">testimonial</li>
                 <li class="nav-contact" data-id="contact">contact</li>
             </ul>
         </nav>
     </header>
     <main class="main">
-        <section class="home">
+        <section class="home" id="home">
             <img class="profile" src="./images/profile.png" alt="">
             <h1>Hello , </br>I'm Dream Coder</h1>
             <h3>A Dream Coder who want to be a developer.</h3>
             <button class="contact">CONTACT ME</button>
         </section>
-        <section class="about">
+        <section class="about" id="about">
             <h1 class="title">About me</h1>
             <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime facere rerum commodi
                 ea cum minima aperiam eos ad, officia laudantium.
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </section>
-        <section class="skills">
+        <section class="skills" id="skills">
             <h1 class="title">Skills</h1>
             <h3 class="subtitle">Skills & Attributes</h3>
             <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime facere rerum commodi
@@ -125,7 +125,7 @@
                 </div>
             </div>
         </section>
-        <section class="mywork">
+        <section class="mywork" id="mywork">
             <h1 class="title">My Work</h1>
             <h3 class="subtitle">Projects</h3>
             <div class="work-categories">
@@ -245,7 +245,7 @@
                 </a>
             </div>
         </section>
-        <section class="testimonials">
+        <section class="testimonials" id="testimonials">
             <h1 class="title">Testimoials</h1>
             <h3 class="description">see what they say about me</h3>
             <div class="testimonial">
@@ -274,7 +274,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <h1 class="footer-title">Let's talk</h1>
         <h3 class="email">cktjdgus45@naver.com</h3>
         <div class="git">
