add project filtering function

--- a/index.html
+++ b/index.html
@@ -129,117 +129,117 @@
             <h1 class="title">My Work</h1>
             <h3 class="subtitle">Projects</h3>
             <div class="work-categories">
-                <button class="work-category">
+                <button class="work-category" data-id="all">
                     <span>All</span>
                     <div class="count">8</div>
                 </button>
-                <button class="work-category">
+                <button class="work-category" data-id="front">
                     <span>Front-end</span>
                     <div class="count">8</div>
                 </button>
-                <button class="work-category">
+                <button class="work-category" data-id="library">
                     <span>Library</span>
                     <div class="count">8</div>
                 </button>
-                <button class="work-category">
+                <button class="work-category" data-id="back">
                     <span>Back-end</span>
                     <div class="count">8</div>
                 </button>
             </div>
             <div class="projects">
-                <a href="https://github.com/cktjdgus45" class="project">
-                    <img src="./images/project.png" alt="project" class="project-img">
+                <a href="https://github.com/cktjdgus45" class="project" data-id="front">
+                    <img src="./images/project1.png" alt="project" class="project-img">
                     <div class="wrapper">
                         <div class="wrapper-bg">
                         </div>
                         <div class="project-description">
-                            <h3>Youtube Website</h3>
+                            <h3>Static Website</h3>
                             <div class="divider"></div>
-                            <p>Cloning Youtube website</p>
+                            <p>Cloning website with HTML,CSS,JS</p>
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/cktjdgus45" class="project">
-                    <img src="./images/project.png" alt="project" class="project-img">
+                <a href="https://github.com/cktjdgus45" class="project" data-id="front">
+                    <img src="./images/project2.png" alt="project" class="project-img">
                     <div class="wrapper">
                         <div class="wrapper-bg">
                         </div>
                         <div class="project-description">
-                            <h3>Youtube Website</h3>
+                            <h3>Static Website</h3>
                             <div class="divider"></div>
-                            <p>Cloning Youtube website</p>
+                            <p>Cloning website with HTML,CSS,JS</p>
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/cktjdgus45" class="project">
-                    <img src="./images/project.png" alt="project" class="project-img">
+                <a href="https://github.com/cktjdgus45" class="project" data-id="front">
+                    <img src="./images/project3.png" alt="project" class="project-img">
                     <div class="wrapper">
                         <div class="wrapper-bg">
                         </div>
                         <div class="project-description">
-                            <h3>Youtube Website</h3>
+                            <h3>Static Website</h3>
                             <div class="divider"></div>
-                            <p>Cloning Youtube website</p>
+                            <p>Cloning website with HTML,CSS,JS</p>
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/cktjdgus45" class="project">
-                    <img src="./images/project.png" alt="project" class="project-img">
+                <a href="https://github.com/cktjdgus45" class="project" data-id="front">
+                    <img src="./images/project4.png" alt="project" class="project-img">
                     <div class="wrapper">
                         <div class="wrapper-bg">
                         </div>
                         <div class="project-description">
-                            <h3>Youtube Website</h3>
+                            <h3>Static Website</h3>
                             <div class="divider"></div>
-                            <p>Cloning Youtube website</p>
+                            <p>Cloning website with HTML,CSS,JS</p>
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/cktjdgus45" class="project">
-                    <img src="./images/project.png" alt="project" class="project-img">
+                <a href="https://github.com/cktjdgus45" class="project" data-id="back">
+                    <img src="./images/project5.png" alt="project" class="project-img">
                     <div class="wrapper">
                         <div class="wrapper-bg">
                         </div>
                         <div class="project-description">
                             <h3>Youtube Website</h3>
                             <div class="divider"></div>
-                            <p>Cloning Youtube website</p>
+                            <p>Cloning Youtube website using NODEJS</p>
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/cktjdgus45" class="project">
-                    <img src="./images/project.png" alt="project" class="project-img">
+                <a href="https://github.com/cktjdgus45" class="project" data-id="library">
+                    <img src="./images/project6.png" alt="project" class="project-img">
                     <div class="wrapper">
                         <div class="wrapper-bg">
                         </div>
                         <div class="project-description">
-                            <h3>Youtube Website</h3>
+                            <h3>Netflix Website</h3>
                             <div class="divider"></div>
-                            <p>Cloning Youtube website</p>
+                            <p>Cloning website using React</p>
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/cktjdgus45" class="project">
-                    <img src="./images/project.png" alt="project" class="project-img">
+                <a href="https://github.com/cktjdgus45" class="project" data-id="library">
+                    <img src="./images/project7.png" alt="project" class="project-img">
                     <div class="wrapper">
                         <div class="wrapper-bg">
                         </div>
                         <div class="project-description">
                             <h3>Youtube Website</h3>
                             <div class="divider"></div>
-                            <p>Cloning Youtube website</p>
+                            <p>Cloning website using React</p>
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/cktjdgus45" class="project">
-                    <img src="./images/project.png" alt="project" class="project-img">
+                <a href="https://github.com/cktjdgus45" class="project" data-id="library">
+                    <img src="./images/project8.png" alt="project" class="project-img">
                     <div class="wrapper">
                         <div class="wrapper-bg">
                         </div>
                         <div class="project-description">
-                            <h3>Youtube Website</h3>
+                            <h3>naver Website</h3>
                             <div class="divider"></div>
-                            <p>Cloning Youtube website</p>
+                            <p>Cloning website using React</p>
                         </div>
                     </div>
                 </a>
