make slurp animation when scrolling down with JS

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     <main class="main">
         <section class="home" id="home">
             <img class="profile" src="./images/profile.png" alt="">
-            <h1>Hello , </br>I'm Dream Coder</h1>
-            <h3>A Dream Coder who want to be a developer.</h3>
-            <button class="contact">CONTACT ME</button>
+            <div class="home-content">
+                <h1>Hello , </br>I'm Dream Coder</h1>
+                <h3>A Dream Coder who want to be a developer.</h3>
+                <button class="contact">CONTACT ME</button>
+            </div>
         </section>
         <section class="about" id="about">
             <h1 class="title">About me</h1>
