change web title & web logo

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cha sung hyeon - potfolio</title>
+    <title>차성현포트폴리오</title>
     <!-- NOT ! -->
-    <meta name="description" content="Portfolio made by Cha sung hyeon">
+    <link rel="icon" href="./images/weblogo.png" type="images/png">
+    <meta name=" description" content="Portfolio made by Cha sung hyeon">
     <meta name="author" content="Cha sung hyeon">
     <link rel="stylesheet" href="style.css">
     <script defer src="./main.js"></script>
