add mediaquery header hambar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <li class="nav-contact" data-id="contact">contact</li>
             </ul>
         </nav>
+        <i class="fas fa-bars" id="bar"></i>
     </header>
     <main class="main">
         <section class="home" id="home">
